# BetterGD

./: .gdmake  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  commit.bat  commit.sh  main.cpp  mod.json  version.rc.in
api/: BGDUtils.hpp  BetterGD.hpp
api/managers/: SuperKeyboardManager.hpp  SuperMouseManager.hpp
api/nodes/: BGCheckbox.hpp  BrownAlertDelegate.hpp  HorizontalSelectMenu.hpp  InputNode.hpp  InputPrompt.hpp  PickMenu.hpp  PopupFileExplorer.hpp  Scrollbar.hpp
docs/: BUILDING.md  DEVELOPING.md
example/: CMakeLists.txt  myplugin.cpp  plugin.cpp
example/MyPlugin/: CMakeLists.txt  myplugin.cpp
example/OtherPlugin/: CMakeLists.txt  otherplugin.cpp
include/: BGDUtils.hpp  BetterGD.hpp
include/bgd/: BGDError.hpp  BGDHook.hpp  BGDLoader.hpp  BGDLog.hpp  BGDLogStream.hpp  BGDMacros.hpp  BGDPlugin.hpp  BGDSaveManager.hpp
include/matdash/: gen.hpp  hook.hpp  matdash.hpp  template-utils.hpp
include/nodes/general/: BGCheckbox.hpp  BrownAlertDelegate.hpp  HorizontalSelectMenu.hpp  InputPrompt.hpp
include/tools/gmd/: gmd.hpp  helpers.hpp
include/tools/keybinds/: Keybind.hpp  KeybindAction.hpp  KeybindCallback.hpp  KeybindManager.hpp  MouseButton.hpp
include/tools/managers/: MouseButton.hpp  SuperKeyboardManager.hpp  SuperMouseManager.hpp
include/tools/nodes/: BGCheckbox.hpp  BGDFileExplorer.hpp  BGLabel.hpp  BrownAlertDelegate.hpp  HorizontalSelectMenu.hpp  InputNode.hpp  InputPrompt.hpp  MonoSpaceLabel.hpp  PickMenu.hpp  Scrollbar.hpp
include/tools/other/: EditCommand.hpp  OverlayNode.hpp
include/utils/gd/: casts.hpp  convert.hpp  general.hpp  include_gd.hpp  macros.hpp  node.hpp  operators.hpp  stream.hpp
include/utils/other/: casts.hpp  const_string.hpp  ext.hpp  file.hpp  general.hpp  map.hpp  platform.hpp  result.hpp  string.hpp  types.hpp  vector.hpp  view.hpp  win32.hpp
installer/move/: CMakeLists.txt  move.cpp
mods/Scrollbars/: CMakeLists.txt  mod.json  scrollbarMod.cpp
plugins/: CMakeLists.txt
plugins/core/: CMakeLists.txt
plugins/core/GDShare/: CMakeLists.txt  GDShare.cpp
plugins/core/Scrollbars/: CMakeLists.txt  scrollbarMod.cpp
plugins/example/MyPlugin/: myplugin.cpp  myplugin.hpp
plugins/example/OtherPlugin/: otherplugin.cpp
src/: BGDInternal.cpp  BGDInternal.hpp  config.h  config.h.in  entry.cpp  main.cpp
src/bgd/: BGDHook.cpp  BGDInternal.cpp  BGDInternal.hpp  BGDLoader.cpp  BGDLoader_win32.cpp  BGDLog.cpp  BGDLogStream.cpp  BGDPlugin.cpp  BGDPlugin_win32.cpp  BGDSaveManager.cpp
src/devtools/: ArgParser.cpp  ArgParser.hpp  BGDIcons.hpp  DevTools.cpp  DevTools.hpp  FeatherIcons.hpp  OpenSans.hpp  RobotoMono.hpp  content.cpp  devhook.cpp  style.cpp
src/devtools/RTTI/: address.cpp  address.hpp  gdrtti.cpp  gdrtti.hpp  memory.cpp  memory.hpp  rtti.cpp  rtti.hpp
src/devtools/fonts/: BGDIcons.hpp  FeatherIcons.hpp  OpenSans.hpp  RobotoMono.hpp  SourceCodeProLight.hpp
src/devtools/old/: NativeUI.cpp  NativeUI.hpp  NativeUI_controls_win32.hpp  NativeUI_win32.hpp
src/devtools/old2/: NativeUI.cpp  NativeUIElement.hpp  NativeUIElementWin32.cpp
src/devtools/ui/: NativeUI.hpp  NativeUIBasic.hpp  NativeUIElement.cpp  NativeUIElement.hpp  NativeUIElementWin32.cpp  NativeUIElementWin32.hpp
src/gui/: PluginLayer.cpp  PluginLayer.hpp  PluginListView.cpp
src/gui/keybinds/: CustomKeybindingsLayer.cpp  CustomKeybindingsLayer.hpp  KeybindListView.cpp  KeybindListView.hpp
src/gui/plugins/: HookListLayer.cpp  HookListLayer.hpp  HookListView.cpp  HookListView.hpp  PluginInfoLayer.cpp  PluginInfoLayer.hpp  PluginLayer.cpp  PluginListView.cpp  PluginListView.hpp
src/hooks/: MenuLayer.cpp  WindowProc.cpp  bgd_hook.cpp  bgd_hook.hpp  dispatchMsg.cpp  hook.hpp  keyDown.cpp  loadAssets.cpp  moveForCommand.cpp  onKeybindings.cpp  scene.cpp  trySaveGame.cpp
src/managers/: SuperKeyboardManager.cpp  SuperMouseManager.cpp
src/nodes/: BGCheckbox.cpp  BrownAlertDelegate.cpp  HorizontalSelectMenu.cpp  InputNode.cpp  InputPrompt.cpp  MonoSpaceLabel.cpp  PickMenu.cpp  PopupFileExplorer.cpp  Scrollbar.cpp
src/nodes/general/: BrownAlertDelegate.cpp  InputNode.cpp  MonoSpaceLabel.cpp  PickMenu.cpp
src/tools/: Base64.hpp  ZlibHelper.cpp  ZlibHelper.hpp  encode.cpp  gmd.cpp  helpers.cpp
src/tools/gmd/: encode.cpp  gmd.cpp  helpers.cpp
src/tools/keybinds/: Keybind.cpp  KeybindAction.cpp  KeybindManager.cpp  defaultBinds.cpp
src/tools/managers/: SuperKeyboardManager.cpp  SuperMouseManager.cpp
src/tools/nodes/: BGCheckbox.cpp  BGDFileExplorer.cpp  BGLabel.cpp  BrownAlertDelegate.cpp  HorizontalSelectMenu.cpp  InputNode.cpp  InputPrompt.cpp  MonoSpaceLabel.cpp  PickMenu.cpp  Scrollbar.cpp
src/tools/other/: OverlayNode.cpp
src/utils/gd/: convert.cpp  general.cpp  node.cpp  stream.cpp
src/utils/other/: file.cpp  general.cpp  map.cpp  string.cpp  vector.cpp
src/utils/other/win32/: funcs_win32.cpp  platform_win32.cpp
submodules/imgui-hook/: CMakeLists.txt  imgui-hook.cpp  imgui-hook.hpp
submodules/imgui-hook/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
submodules/imgui-hook/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_win32.cpp
